force-app/main/default/objects/BMCServiceDesk__SYSTemplateAccess__c/BMCServiceDesk__SYSTemplateAccess__c.object-meta.xml
<CustomObject>
    <description>This object allows you to store data for the users who can access templates.</description>
    <label>Templates Access</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SYSTemplateAccess</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>