force-app/main/default/objects/BMCServiceDesk__SYSTemplateAccess__c/fields/BMCServiceDesk__profile__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__profile__c</fullName>
    <label>Profile</label>
    <length>100</length>
    <type>Text</type>
</CustomField>