force-app/main/default/objects/BMCServiceDesk__SYSTemplateAccess__c/fields/BMCServiceDesk__templateId__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__templateId__c</fullName>
    <label>FKTemplate</label>
    <referenceTo>BMCServiceDesk__SYSTemplate__c</referenceTo>
    <relationshipName>SYSTemplate_Access</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>