force-app/main/default/objects/BMCServiceDesk__SYSTemplateAccess__c/fields/BMCServiceDesk__templateName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__templateName__c</fullName>
    <formula>BMCServiceDesk__templateId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template Name</label>
    <type>Text</type>
</CustomField>